# forma-normal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix  imgui.ini  normal.cpp  tabela.cpp
src/: appFN.cpp  appFN.hpp  cambriamath.cpp  forma_normal.cpp  forma_normal.hpp  main.cpp  normal.cpp  tabela_verdade.cpp  tabela_verdade.hpp
